--- a/alpaca.csproj
+++ b/alpaca.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Item_reference.cs" />
     <Compile Include="Assets\Scripts\AutoDecrease.cs" />
     <Compile Include="Assets\Scripts\BagManager.cs" />
     <Compile Include="Assets\Scripts\CameraControl.cs" />
