--- a/alpaca.csproj
+++ b/alpaca.csproj
@@ -84,19 +84,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Item_reference.cs" />
     <Compile Include="Assets\Scripts\AutoDecrease.cs" />
     <Compile Include="Assets\Scripts\BagManager.cs" />
     <Compile Include="Assets\Scripts\CameraControl.cs" />
     <Compile Include="Assets\Scripts\Interact.cs" />
     <Compile Include="Assets\Scripts\InteractableItem.cs" />
+    <Compile Include="Assets\Scripts\Item_reference.cs" />
     <Compile Include="Assets\Scripts\JoyStick.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MovingCamera.cs" />
-    <Compile Include="Assets\Scripts\NPC.cs" />
     <Compile Include="Assets\Scripts\PlayerMoveControll.cs" />
+    <Compile Include="Assets\Scripts\SlotManager.cs" />
     <Compile Include="Assets\Scripts\use.cs" />
-    <Compile Include="Assets\SlotManager.cs" />
+    <Compile Include="Assets\npcExchange.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
