--- a/alpaca.csproj
+++ b/alpaca.csproj
@@ -89,14 +89,14 @@
     <Compile Include="Assets\Scripts\CameraControl.cs" />
     <Compile Include="Assets\Scripts\Interact.cs" />
     <Compile Include="Assets\Scripts\InteractableItem.cs" />
+    <Compile Include="Assets\Scripts\ItemManager.cs" />
     <Compile Include="Assets\Scripts\Item_reference.cs" />
     <Compile Include="Assets\Scripts\JoyStick.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MovingCamera.cs" />
     <Compile Include="Assets\Scripts\PlayerMoveControll.cs" />
     <Compile Include="Assets\Scripts\SlotManager.cs" />
-    <Compile Include="Assets\Scripts\use.cs" />
-    <Compile Include="Assets\npcExchange.cs" />
+    <Compile Include="Assets\Scripts\npcExchange.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
